# vla-rlt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: default.yaml
configs/tasks/: ethernet_insertion.yaml  screwdriver_alignment.yaml  so101_pick_place.yaml
groot_rlt/: __init__.py
groot_rlt/envs/: __init__.py  robot_env.py
groot_rlt/models/: __init__.py  actor.py  critic.py  groot_wrapper.py  rlt_encoder.py
groot_rlt/training/: __init__.py  replay_buffer.py  sac.py  trainer.py
groot_rlt/utils/: __init__.py  checkpointing.py  logging.py
rlt/: __init__.py
rlt/envs/: robot_env.py
rlt/models/: smolvla_wrapper.py
scripts/: collect_demos.py  evaluate.py  pretrain_rlt.py  test_smolvla_robot.py  train.py
tests/: test_models.py  test_training.py
